--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ ol .lik {
     transform: translateZ(-3px);
     transition: all 0.7s ease;
 
-}
+}z
 /*fin productos*/
     /*comienzo del about*/
     /*primera section*/
