--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@
         text-align: center;
         font-size: 3rem;
     }
+
     .recipiente {
         margin: auto;
         background-color: white;
@@ -216,79 +217,84 @@
         text-align: center;
         padding: 0, 9em;
     }
+
     /*fin del index*/
-/*productos*/
-.car__ventas .contiene {
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(4, 250px);
-    grid-template-rows: repeat (4, 200px);
-    justify-content: space-around;
-}
-.produc__graf{
-    font-size: 3rem;
-    color: coral;
-}
-.car__ventas .contiene2 {
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(4, 250px);
-    grid-template-rows: repeat (4, 200px);
-    justify-content: space-around;
-}
+    /*productos*/
+    .car__ventas .contiene {
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: repeat(4, 250px);
+        grid-template-rows: repeat (4, 200px);
+        justify-content: space-around;
+    }
 
-.contiene img {
-    height: 12rem;
-    width: 16rem;
-    font-size: 1rem;
-    border-radius: 3rem;
-}
-.contiene2 img {
-   height: 12rem;
-   width: 16rem;
-   font-size: 1rem;
-   border-radius: 3rem;
-}
+    .produc__graf {
+        font-size: 3rem;
+        color: coral;
+    }
 
-.card {
-    
-    height: 18rem;
-    width: 16rem;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 1px 2px 7px 5px rgb(156, 154, 154);
-    border-radius: 3rem;
-    transition: all 0.8s linear;
-}
+    .car__ventas .contiene2 {
+        display: grid;
+        gap: 1rem;
+        grid-template-columns: repeat(4, 250px);
+        grid-template-rows: repeat (4, 200px);
+        justify-content: space-around;
+    }
 
-.card:hover {
-    transform: scale(1.2);
+    .contiene img {
+        height: 12rem;
+        width: 16rem;
+        font-size: 1rem;
+        border-radius: 3rem;
+    }
 
-}
+    .contiene2 img {
+        height: 12rem;
+        width: 16rem;
+        font-size: 1rem;
+        border-radius: 3rem;
+    }
 
-.card-venta {
-    color: black;
-    font-size: 1rem;
-}
+    .card {
 
-ol .lik {
-    list-style: none;
-    font-size: 1rem;
-    padding-top: 2px;
-}
+        height: 18rem;
+        width: 16rem;
+        color: black;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 1px 2px 7px 5px rgb(156, 154, 154);
+        border-radius: 3rem;
+        transition: all 0.8s linear;
+    }
 
-.car__ventas .butom:hover {
-    font-size: 1.2rem;
-    background-color: rgb(207, 77, 77);
-    width: 5rem;
-    border: solid 1px rgb(189, 26, 26);
-    box-shadow: 1px 2px 7px 5px rgb(156, 154, 154);
-    transform: translateZ(-3px);
-    transition: all 0.7s ease;
+    .card:hover {
+        transform: scale(1.2);
 
-}
-/*fin productos*/
+    }
+
+    .card-venta {
+        color: black;
+        font-size: 1rem;
+    }
+
+    ol .lik {
+        list-style: none;
+        font-size: 1rem;
+        padding-top: 2px;
+    }
+
+    .car__ventas .butom:hover {
+        font-size: 1.2rem;
+        background-color: rgb(207, 77, 77);
+        width: 5rem;
+        border: solid 1px rgb(189, 26, 26);
+        box-shadow: 1px 2px 7px 5px rgb(156, 154, 154);
+        transform: translateZ(-3px);
+        transition: all 0.7s ease;
+
+    }
+
+    /*fin productos*/
     /*comienzo del about*/
     /*primera section*/
     .historia {
@@ -325,7 +331,7 @@ ol .lik {
 
     /*segunda section*/
     .presentacion {
-   
+
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -378,31 +384,45 @@ ol .lik {
 
     /*fin del about*/
     /*inicio login*/
-    .title{
+    .title {
         color: white;
         text-align: center;
         padding-top: 1rem;
         font-size: 1.4rem;
     }
-    .clientes h4{
+
+    .clientes h4 {
         color: rgb(21, 20, 20);
         font-size: 1.9rem;
+
     }
-    #inicio, .registro{
+
+    .reg,
+    .reg2 {
+        font-size: 3rem;
+        padding: 0%;  
+    }
+
+    #inicio,
+    .registro {
         background: linear-gradient(blue, red);
         margin-top: 2rem;
         border: solid 0.2rem red;
         padding-left: 1rem;
 
     }
- .container{
-    padding-left:50rem;
- }
-    .inicie{
+
+    .containe {
+        padding-left: 1.5rem;
+        margin-bottom: .8rem;
+    }
+
+    .inicie {
         width: 9rem;
         height: 9rem;
     }
-    .container button {
+
+    .containe button {
         height: 1.2rem;
         width: 40%;
         background: rgb(27, 15, 247);
@@ -410,12 +430,14 @@ ol .lik {
         color: rgb(255, 255, 255);
 
     }
-    .container button:hover,
+
+    .containe button:hover,
     button:focus {
         background: #02023c;
         color: white;
         font-size: 0.9rem;
     }
+
     .registro button {
         height: 1.2rem;
         width: 40%;
@@ -423,16 +445,21 @@ ol .lik {
         font-size: 0.6rem;
         color: rgb(255, 255, 255);
     }
+
     .registro button:hover,
-button:focus {
-    background: #02023c;
-    color: white;
-    font-size: 0.9rem;
+    button:focus {
+        background: #02023c;
+        color: white;
+        font-size: 0.9rem;
+    }
+.target{
+    margin-left: 1rem;
 }
-.retrato{
-    height: 13rem;
-    padding-left: 2rem;
-}
+    .retrato {
+        height: 13rem;
+  
+    }
+
     /*fin login*/
 
     .end {
