--- a/style.css
+++ b/style.css
@@ -64,6 +64,67 @@
         font-size: 3rem;
     }
 
+    .publicidades {
+        margin-top: 0.4rem;
+
+        width: 100%;
+        height: 20rem;
+    }
+
+    ul.publi {
+        position: relative;
+        width: 100%;
+        height: 16rem;
+    }
+
+    ul.publi li {
+        position: absolute;
+        left: 0px;
+        top: 0px;
+        opacity: 0;
+        width: inherit;
+        height: inherit;
+        transition: opacity .5s;
+        background: #fff;
+    }
+
+    ul.publi li img {
+        width: 100%;
+        height: 18rem;
+        object-fit: cover;
+    }
+
+    ul.publi li:first-child {
+        opacity: 2;
+    }
+
+    ul.publi li:target {
+        opacity: 1;
+    }
+
+    .direcional {
+        text-align: center;
+        margin: 2em;
+    }
+
+    .direcional li {
+        display: inline-block;
+        text-align: center;
+    }
+
+    .direcional li a {
+        display: inline-block;
+        color: rgb(255, 2, 2);
+        text-decoration: none;
+        background-color: rgb(255, 0, 0);
+        padding: 1em;
+        width: 1em;
+        height: 1em;
+        font-size: .5em;
+        border-radius: 110%;
+    }
+
+
     .recipiente {
         margin: auto;
         background-color: white;
@@ -297,7 +358,7 @@
 
     /*fin productos*/
     /*inicio de contacto*/
-   
+
     .chat {
         border: solid 0.1rem black;
         background: linear-gradient(red, white);
@@ -307,7 +368,7 @@
         text-align: center;
         height: 30rem;
         color: white;
-        
+
     }
 
     .operadora {
@@ -315,33 +376,38 @@
         width: 8rem;
         padding: 0.9rem;
     }
-    .info{
+
+    .info {
         border: solid 0.1rem black;
         background: linear-gradient(black, white);
         display: flex;
         flex-direction: column;
         align-content: center;
     }
-    .detalle .lee{
+
+    .detalle .lee {
         padding-top: 2rem;
         color: white;
         text-align: left;
     }
-    .lee li{
+
+    .lee li {
         margin-top: 1rem;
     }
-    .red{
+
+    .red {
         height: 8rem;
         width: 8rem;
         padding-bottom: 0.9rem;
         transition: all 0.5s linear;
     }
-    .red:hover{
+
+    .red:hover {
         transform: scale(0.9);
         border-radius: 100%;
     }
 
-    
+
     /*fin de contact*/
     /*comienzo del about*/
     /*primera section*/
