--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@
         width: inherit;
         height: inherit;
         transition: opacity .5s;
-        background: #fff;
+   
     }
 
     ul.publi li img {
@@ -519,9 +519,15 @@
 
     #inicio,
     .registro {
-        background: linear-gradient(blue, red);
-        margin-top: 2rem;
-        border: solid 0.2rem red;
+        background: rgba( 241, 96, 96, 0.4 );
+        box-shadow: 0 1rem 5rem 0 rgba(6, 20, 215, 0.37);
+        backdrop-filter: blur( 4.5px );
+        -webkit-backdrop-filter: blur( 4.5px );
+        border-radius: 1rem;
+        border: 0.2rem solid rgba(82, 15, 217, 0.18);
+        margin-top: 1rem;
+       
+       
         padding-left: 1rem;
 
     }
@@ -568,8 +574,48 @@
     }
 
     .retrato {
-        height: 13rem;
+        width: 100%;
+        height: 100%;
     }
+    .flip-container {
+        background-color: transparent;
+        width: 15rem;
+        height: 15rem;
+        perspective: 1000px; 
+      }
+      .target {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 1s;
+        transform-style: preserve-3d;
+      }
+      .flip-container:hover .target {
+        transform: rotateY(180deg);
+      }
+      .front, .back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1rem;
+      }
+      .front {
+        background-color: #6a0b59;
+        color: #fff;
+        
+      }
+      .back {
+        background:linear-gradient(gray, black);
+        color: white;
+        transform: rotateY(180deg);
+        display: flex;
+        flex-direction: column;
+      }
 
     /*fin login*/
 
